img corrected on iphone4

--- a/src/app/welcome-section/welcome-section.component.scss
+++ b/src/app/welcome-section/welcome-section.component.scss
@@ -206,7 +206,6 @@ $size: 10rem;
     }
 
     .main_picture {
-        margin-top: 32px;
         width: 240px;
         height: 240px;
     }
